# gmrun

./: .cirrus.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Contrib  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.gmrunrc  README.hints  README.icewm  README.markdown  README.md  acinclude.m4  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.project  gmrun.glade  gmrun.spec  gmrun.spec.in  gmrunrc  gtkcompat.h  make-release  mkinstalldirs  zrelease
.github/: cirrus-ci.sh
config/: Makefile.am  gmrunrc
data/: Makefile  Makefile.am  Makefile.in  gmrun.1  gmrun.desktop  gmrunrc  zmtrace.sh
po/: Makefile  POTFILES  es.po  fr.po  gmrun.pot  he.po  zzpo.sh
src/: Makefile  Makefile.am  Makefile.in  Makefile.true  ci_string.h  config_prefs.c  config_prefs.h  gtkcompat.c  gtkcompat.h  gtkcompletionline.c  gtkcompletionline.cc  gtkcompletionline.h  history.c  history.cc  history.h  main.c  main.cc  main.h  prefs.cc  prefs.h
w_conf/: _exec_make_dir.sh  gettext  gtk
